make sure test is deteministic